--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: permute
-Title: Functions for generating restricted permutations of data
+Title: Functions for Generating Restricted Permutations of Data
 Version: 0.8-4
-Date: 2014-Sep-13
+Date: 2015-May-19
 Authors@R: c(person(given = "Gavin L.", family = "Simpson",
                     email = "ucfagls@gmail.com",
                     role = c("aut", "cph", "cre")),
