add a nobs method for factors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ S3method("nobs", "numeric")
 S3method("nobs", "integer")
 S3method("nobs", "matrix")
 S3method("nobs", "data.frame")
+S3method("nobs", "factor")
 ## getFoo methods
 S3method("getBlocks", "default")
 S3method("getBlocks", "how")
