setCol<- and setRow<- methods for classes 'Within' and 'Plots' were not exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,8 +162,12 @@ S3method("setComplete<-", "default")
 S3method("setComplete<-", "how")
 S3method("setRow<-", "default")
 S3method("setRow<-", "how")
+S3method("setRow<-", "Within")
+S3method("setRow<-", "Plots")
 S3method("setCol<-", "default")
 S3method("setCol<-", "how")
+S3method("setCol<-", "Within")
+S3method("setCol<-", "Plots")
 S3method("setDim<-", "default")
 S3method("setDim<-", "how")
 S3method("setMake<-", "default")
