setDim<- methods for classes 'Within' and 'Plots' were not exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -170,6 +170,8 @@ S3method("setCol<-", "Within")
 S3method("setCol<-", "Plots")
 S3method("setDim<-", "default")
 S3method("setDim<-", "how")
+S3method("setDim<-", "Within")
+S3method("setDim<-", "Plots")
 S3method("setMake<-", "default")
 S3method("setMake<-", "how")
 S3method("setObserved<-", "default")
