--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: r
 
-sudo: required
+sudo: false
 
-apt_packages:
-  - qpdf
+addons:
+  apt:
+    packages:
+      - qpdf
 
 r_binary_packages:
   - testthat
