--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ if (getRversion() >= "2.13.0") {
 importFrom("stats", "getCall", "runif", "update")
 
 ### S3 Methods
+S3method("as.numeric", "numPerms")
 S3method("as.matrix", "allPerms")
 S3method("as.matrix", "permutationMatrix")
 S3method("update", "how")
@@ -73,6 +74,7 @@ S3method("update", "Plots")
 S3method("print", "allPerms")
 S3method("print", "check")
 S3method("print", "how")
+S3method("print", "numPerms")
 S3method("print", "permutationMatrix")
 S3method("print", "summary.allPerms")
 S3method("print", "summary.check")
