--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Version: 0.9-4
 Date: 2016-08-08
 Authors@R: c(person(given = "Gavin L.", family = "Simpson",
                     email = "ucfagls@gmail.com",
-                    role = c("aut", "cph", "cre")),
+                    role = c("aut", "cph", "cre"),
+		    comment = c(ORCID = "0000-0002-9084-8413")),
              person(given = "R Core Team", role = "cph"),
              person(given = "Douglas M.", family = "Bates", role = "ctb"),
              person(given = "Jari", family = "Oksanen", role = "ctb"))
