--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: r
 cache: packages
 
-r:
-  - release
-  - devel
+matrix:
+  include:
+  - r: devel
+  - r: release
 
 sudo: false
 
@@ -22,7 +23,7 @@ r_binary_packages:
   - htmltools
 
 r_github_packages:
-  - jimhester/covr
+  - r-lib/covr
 
 after_success:
   - Rscript -e 'covr::codecov()'
