--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,6 +30,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - uses: r-lib/actions/setup-tinytex@master
 
       - uses: r-lib/actions/setup-pandoc@v1
 
