convert the vignette to rmarkdown/html

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,11 @@ Authors@R: c(person(given = "Gavin L.", family = "Simpson",
              person(given = "Jari", family = "Oksanen", role = "ctb"))
 Depends: R (>= 2.14.0)
 Imports: stats
-Suggests: vegan (>= 2.0-0), testthat (>= 0.5), parallel
+Suggests: vegan (>= 2.0-0), testthat (>= 0.5), parallel, knitr, rmarkdown, bookdown, sessioninfo
 Description: A set of restricted permutation designs for freely exchangeable, line transects (time series), and spatial grid designs plus permutation of blocks (groups of samples) is provided. 'permute' also allows split-plot designs, in which the whole-plots or split-plots or both can be freely-exchangeable or one of the restricted designs. The 'permute' package is modelled after the permutation schemes of 'Canoco 3.1' (and later) by Cajo ter Braak.
 License: GPL-2
 ByteCompile: true 
 URL: https://github.com/gavinsimpson/permute
 BugReports: https://github.com/gavinsimpson/permute/issues
 Copyright: see file COPYRIGHTS
+VignetteBuilder: knitr
